special magic weapons & melee weapon tweak

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -885,7 +885,7 @@
     2:
       items:
       - 魔君的礼物
-      - 魔君水晶:1:1:0.1
+      - 亚利姆水晶:1:1:0.1
       - 龙魂碎片:30:35
       - 铂金币:10
       - 终极治疗药水:5:15
